chore(api): remove parameter from extended schema
